--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,8 +53,7 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-    - assets/jersey1.png
-    - assets/jersey2.png
+    - assets/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
